// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result Title show message error when has error 1`] = `
<div
  class="container-fluid"
  data-testid="result-title"
>
  <div
    data-testid="title-error"
  >
    <span>
      Ups algo salio mal!!!
    </span>
  </div>
</div>
`;

exports[`Result Title show message result when found result 1`] = `
<div
  class="container-fluid"
  data-testid="result-title"
>
  <div
    data-testid="found-result"
  >
    <span>
      Resultados para 
    </span>
    <strong>
      search
    </strong>
    <span>
      :
    </span>
  </div>
</div>
`;

exports[`Result Title show message the welcome when inital page 1`] = `
<div
  class="container-fluid"
  data-testid="result-title"
>
  <div
    data-testid="welcome-title"
  >
    <span>
      Bienvenido!!!
    </span>
  </div>
</div>
`;

exports[`Result Title show message without result when not found result 1`] = `
<div
  class="container-fluid"
  data-testid="result-title"
>
  <div
    data-testid="not-found-result"
  >
    <span>
      No encontramos resultados para 
    </span>
    <strong>
      search
    </strong>
    <span>
      :
    </span>
  </div>
</div>
`;
